Full rebuild official DOKB website with SK-based tariff calculation

--- a/index.html
+++ b/index.html
@@ -15,54 +15,53 @@ body { font-family: 'Inter', sans-serif; }
 
 <body class="bg-gray-50 text-gray-800">
 
-<!-- NAVBAR -->
+<!-- HEADER -->
 <header class="bg-black fixed w-full z-50 shadow-lg">
-  <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-    <div class="flex items-center space-x-4">
-      <img src="logo-dokb.png" class="h-14 w-14 object-contain">
-      <div class="text-white">
-        <h1 class="font-semibold text-lg">DOKB</h1>
-        <p class="text-xs text-gray-400">Driver Online Kalimantan Selatan Bersatu</p>
-      </div>
-    </div>
-    <div class="hidden md:flex space-x-6 text-gray-300 text-sm">
-      <a href="#tentang" class="hover:text-white">Tentang</a>
-      <a href="#legalitas" class="hover:text-white">Legalitas</a>
-      <a href="#keanggotaan" class="hover:text-white">Keanggotaan</a>
-      <a href="#tarif" class="hover:text-white">Tarif</a>
-      <a href="#kontak" class="hover:text-white">Kontak</a>
-    </div>
+  <div class="max-w-7xl mx-auto px-6 py-6 flex flex-col items-center">
+
+    <img src="logo-dokb.png" 
+         class="h-24 w-24 object-contain mb-3">
+
+    <h1 class="text-white text-lg font-semibold text-center">
+      DOKB
+    </h1>
+
+    <p class="text-gray-400 text-xs text-center">
+      Perkumpulan Driver Online Kalimantan Selatan Bersatu
+    </p>
+
   </div>
 </header>
 
-<div class="h-28"></div>
+<div class="h-48"></div>
 
 <!-- HERO -->
 <section class="bg-gradient-to-b from-gray-900 to-gray-800 text-white py-28 text-center">
   <h2 class="text-4xl md:text-5xl font-bold leading-tight">
-    Perkumpulan Driver Online  
+    Organisasi Resmi Driver Online  
     <span class="text-red-500">Kalimantan Selatan</span>
   </h2>
   <p class="mt-6 text-gray-300 max-w-2xl mx-auto">
-    Organisasi berbadan hukum yang memperjuangkan regulasi adil,
-    perlindungan anggota, dan peningkatan kesejahteraan driver online roda empat.
+    Berbadan hukum, independen, dan memperjuangkan regulasi yang adil
+    bagi driver online roda empat di Provinsi Kalimantan Selatan.
   </p>
 </section>
 
 <!-- TENTANG -->
-<section id="tentang" class="py-20 max-w-5xl mx-auto px-6 text-center">
+<section class="py-20 max-w-5xl mx-auto px-6 text-center">
   <h3 class="text-3xl font-semibold mb-6">Tentang DOKB</h3>
   <p class="text-gray-700 leading-relaxed">
-    DOKB adalah organisasi resmi yang telah mendapatkan pengesahan
-    Kementerian Hukum Republik Indonesia dan memiliki Nomor Induk Berusaha (NIB).
-    Berkedudukan di Kota Banjarmasin dan mewakili driver online roda empat
+    DOKB adalah organisasi resmi yang telah mendapatkan pengesahan 
+    Kementerian Hukum Republik Indonesia serta memiliki Nomor Induk Berusaha (NIB). 
+    Berkedudukan di Kota Banjarmasin dan mewakili driver online roda empat 
     di wilayah Kalimantan Selatan.
   </p>
 </section>
 
 <!-- LEGALITAS -->
-<section id="legalitas" class="bg-gray-900 text-white py-20">
+<section class="bg-gray-900 text-white py-20">
   <div class="max-w-5xl mx-auto px-6 text-center">
+
     <h3 class="text-3xl font-semibold mb-10">Legalitas Resmi</h3>
 
     <div class="grid md:grid-cols-2 gap-8 text-left">
@@ -70,7 +69,7 @@ body { font-family: 'Inter', sans-serif; }
       <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
         <h4 class="text-lg font-semibold mb-2">SK Kemenkumham</h4>
         <p>Nomor: AHU-0007418.AH.01.07.TAHUN 2025</p>
-        <p>Tanggal Pengesahan: 17 September 2025</p>
+        <p>Tanggal: 17 September 2025</p>
         <p>Berkedudukan: Kota Banjarmasin</p>
       </div>
 
@@ -86,82 +85,99 @@ body { font-family: 'Inter', sans-serif; }
 </section>
 
 <!-- KEANGGOTAAN -->
-<section id="keanggotaan" class="py-20 bg-white">
-  <div class="max-w-4xl mx-auto px-6 text-center">
-    <h3 class="text-3xl font-semibold mb-8">Keanggotaan</h3>
+<section class="py-20 bg-white text-center px-6">
+  <h3 class="text-3xl font-semibold mb-8">Keanggotaan</h3>
 
-    <ul class="text-gray-700 space-y-2 mb-8">
-      <li>Driver online roda empat aktif</li>
-      <li>KTP, SIM & STNK berlaku</li>
-      <li>Patuhi AD/ART organisasi</li>
-      <li>Bukan perwakilan aplikator</li>
-    </ul>
+  <ul class="text-gray-700 space-y-2 mb-8">
+    <li>Driver online roda empat aktif</li>
+    <li>KTP, SIM & STNK berlaku</li>
+    <li>Mematuhi AD/ART organisasi</li>
+    <li>Bukan perwakilan aplikator</li>
+  </ul>
 
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSd6nWc5cFUzKbhhJjyGg-gfvyQxReknKdXtitp-rqqS3WD99g/viewform"
-       target="_blank"
-       class="bg-red-600 text-white px-8 py-3 rounded-md hover:bg-red-700 transition shadow-md">
-       Daftar Anggota DOKB
-    </a>
-  </div>
-</section>
-
-<!-- SIMULASI TARIF -->
-<section id="tarif" class="py-20 bg-gray-100">
-  <div class="max-w-xl mx-auto px-6 text-center">
-    <h3 class="text-3xl font-semibold mb-6">Simulasi Tarif</h3>
-    <p class="text-gray-600 mb-6">Masukkan jarak perjalanan (KM)</p>
-
-    <input type="number" id="jarak"
-      class="w-full p-3 border rounded-md mb-4"
-      placeholder="Contoh: 10">
-
-    <button onclick="hitungTarif()"
-      class="bg-black text-white px-6 py-3 rounded-md hover:bg-gray-800 transition">
-      Hitung Tarif
-    </button>
-
-    <div id="hasil" class="mt-6 text-lg font-medium"></div>
-  </div>
-</section>
-
-<!-- KONTAK -->
-<section id="kontak" class="py-20 max-w-4xl mx-auto px-6 text-center">
-  <h3 class="text-3xl font-semibold mb-6">Kontak Resmi</h3>
-  <p class="mb-2">sekretariat@dokb.or.id</p>
-  <p class="mb-2">sekretariat.dokb@gmail.com</p>
-  <p class="mb-4">WhatsApp: +62 822 4646 3652</p>
-
-  <a href="https://wa.me/6282246463652"
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSd6nWc5cFUzKbhhJjyGg-gfvyQxReknKdXtitp-rqqS3WD99g/viewform"
      target="_blank"
-     class="bg-green-600 text-white px-6 py-3 rounded-md hover:bg-green-700 transition">
-     Hubungi via WhatsApp
+     class="bg-red-600 text-white px-8 py-3 rounded-md hover:bg-red-700 transition shadow-md">
+     Daftar Anggota DOKB
   </a>
 </section>
 
-<!-- FOOTER -->
-<footer class="bg-black text-gray-400 text-center py-6">
-  © 2025 Perkumpulan Driver Online Kalimantan Selatan Bersatu (DOKB)  
-  <br> Independen • Non-Profit • Berbadan Hukum
-</footer>
+<!-- PERHITUNGAN TARIF RESMI -->
+<section class="py-20 bg-gray-100">
+  <div class="max-w-2xl mx-auto px-6 text-center">
+
+    <h3 class="text-3xl font-semibold mb-2">
+      Perhitungan Tarif Resmi
+    </h3>
+
+    <p class="text-gray-700 font-medium">
+      Berdasarkan SK Gubernur Kalimantan Selatan Tahun 2025
+    </p>
+
+    <p class="text-sm text-gray-500 mb-6">
+      Tentang Penetapan Tarif Angkutan Sewa Khusus (ASK)
+    </p>
+
+    <div class="bg-white p-4 rounded shadow text-sm text-gray-600 mb-8">
+      <p>• 3 KM pertama (maksimal): <b>Rp 16.000</b></p>
+      <p>• Tarif Batas Bawah (TBB): <b>Rp 4.000 / KM</b></p>
+      <p>• Tarif Batas Atas (TBA): <b>Rp 6.500 / KM</b></p>
+    </div>
+
+    <input type="number" id="jarak"
+      class="w-full p-3 border rounded-md mb-4"
+      placeholder="Masukkan jarak perjalanan (KM)">
+
+    <button onclick="hitungTarif()"
+      class="bg-black text-white px-6 py-3 rounded-md hover:bg-gray-800 transition">
+      Hitung Berdasarkan SK
+    </button>
+
+    <div id="hasil" class="mt-8 text-lg"></div>
+
+    <p class="text-xs text-gray-500 mt-6">
+      Perhitungan mengikuti metodologi tarif dalam regulasi 
+      yang berlaku di Provinsi Kalimantan Selatan.
+    </p>
+
+  </div>
+</section>
 
 <script>
 function hitungTarif() {
-  let km = document.getElementById("jarak").value;
-  let tarifBawah = 4500;
-  let tarifAtas = 6000;
 
-  if (km <= 0 || km === "") {
+  let km = parseFloat(document.getElementById("jarak").value);
+
+  const tarifAwal = 16000;
+  const TBB = 4000;
+  const TBA = 6500;
+
+  if (!km || km <= 0) {
     document.getElementById("hasil").innerHTML =
       "<span class='text-red-600'>Masukkan jarak yang valid</span>";
     return;
   }
 
-  let bawah = km * tarifBawah;
-  let atas = km * tarifAtas;
+  if (km <= 3) {
+    document.getElementById("hasil").innerHTML =
+      "<div class='bg-white p-6 rounded shadow'>" +
+      "<p class='font-medium'>Total Tarif Resmi</p>" +
+      "<p class='text-xl font-bold mt-2'>Rp " + tarifAwal.toLocaleString() + "</p>" +
+      "</div>";
+    return;
+  }
+
+  let sisaKm = km - 3;
+
+  let totalBawah = tarifAwal + (sisaKm * TBB);
+  let totalAtas = tarifAwal + (sisaKm * TBA);
 
   document.getElementById("hasil").innerHTML =
-    "Tarif Bawah: Rp " + bawah.toLocaleString() +
-    "<br>Tarif Atas: Rp " + atas.toLocaleString();
+    "<div class='bg-white p-6 rounded shadow text-left'>" +
+    "<p class='font-medium mb-2'>Hasil Perhitungan Tarif Resmi:</p>" +
+    "<p>Tarif Batas Bawah: <b>Rp " + totalBawah.toLocaleString() + "</b></p>" +
+    "<p>Tarif Batas Atas: <b>Rp " + totalAtas.toLocaleString() + "</b></p>" +
+    "</div>";
 }
 </script>
 
